AngularJs controller namespace rename

--- a/src/Our.Umbraco.Contentment/DataEditors/Checkbox/checkbox.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/Checkbox/checkbox.html
@@ -3,7 +3,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="contentment umb-boolean" ng-controller="Our.Umbraco.Contentment.DataEditors.Checkbox.Controller as vm">
+<div class="contentment umb-boolean" ng-controller="Umbraco.Community.Contentment.DataEditors.Checkbox.Controller as vm">
     <label class="checkbox umb-form-check umb-form-check--checkbox">
         <input type="checkbox" id="{{vm.alias}}" class="umb-form-check__input" ng-model="model.value" ng-true-value="{{vm.true}}" ng-false-value="{{vm.false}}" />
         <span class="umb-form-check__state" aria-hidden="true">
