--- a/src/Our.Umbraco.Contentment/DataEditors/CheckboxList/checkbox-list.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/CheckboxList/checkbox-list.html
@@ -8,7 +8,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="contentment umb-checkboxlist" ng-controller="Our.Umbraco.Contentment.DataEditors.CheckboxList.Controller as vm">
+<div class="contentment umb-checkboxlist" ng-controller="Umbraco.Community.Contentment.DataEditors.CheckboxList.Controller as vm">
     <ul class="unstyled toggle-all" ng-if="vm.toggleAll">
         <li>
             <label class="checkbox umb-form-check umb-form-check--checkbox">
