--- a/src/Our.Umbraco.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
@@ -3,7 +3,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="contentment" ng-controller="Our.Umbraco.Contentment.Overlays.ConfigurationEditor.Controller as vm">
+<div class="contentment" ng-controller="Umbraco.Community.Contentment.Overlays.ConfigurationEditor.Controller as vm">
     <umb-editor-view>
 
         <umb-editor-header name="vm.title"
