--- a/src/Our.Umbraco.Contentment/DataEditors/ItemPicker/item-picker.overlay.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/ItemPicker/item-picker.overlay.html
@@ -8,7 +8,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="contentment" ng-controller="Our.Umbraco.Contentment.Overlays.ItemPicker.Controller as vm">
+<div class="contentment" ng-controller="Umbraco.Community.Contentment.Overlays.ItemPicker.Controller as vm">
 
     <umb-editor-view>
 
