--- a/src/Our.Umbraco.Contentment/DataEditors/RadioButtonList/radio-button-list.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/RadioButtonList/radio-button-list.html
@@ -3,7 +3,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="contentment umb-radiobuttons" ng-controller="Our.Umbraco.Contentment.DataEditors.RadioButtonList.Controller as vm">
+<div class="contentment umb-radiobuttons" ng-controller="Umbraco.Community.Contentment.DataEditors.RadioButtonList.Controller as vm">
     <ul class="unstyled radio no-indent" ng-class="vm.layout">
         <li ng-repeat="item in vm.items">
             <label>
