ConfigurationEditor - small amends

--- a/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.html
@@ -8,7 +8,7 @@
         <umb-node-preview ng-repeat="item in model.value"
                           icon="item.icon"
                           name="item.name"
-                          published="vm.published"
+                          published="true"
                           description="item.description"
                           sortable="vm.sortable"
                           allow-remove="vm.allowRemove"
