--- a/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.html
@@ -14,10 +14,10 @@
                           allow-remove="vm.allowRemove"
                           allow-edit="vm.allowEdit"
                           on-remove="vm.remove($index)"
-                          on-edit="vm.edit($index, item)">
+                          on-edit="vm.edit($index)">
         </umb-node-preview>
     </div>
-    <a class="umb-node-preview-add" href="" ng-click="vm.add($event)" ng-if="vm.allowAdd" prevent-default>
+    <a class="umb-node-preview-add" href="" ng-click="vm.add()" ng-if="vm.allowAdd" prevent-default>
         <localize key="general_add">Add</localize>
     </a>
     <contentment-dev-mode ng-model="model.value" on-update="vm.validate()" ng-if="vm.enableDevMode" />
