--- a/src/Umbraco.Community.Contentment/DataEditors/Cards/cards.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/Cards/cards.html
@@ -1,5 +1,5 @@
 ﻿<!-- Copyright © 2013-present Umbraco.
-   - This Source Code has been take from Umbraco CMS.
+   - This Source Code has been derived from Umbraco CMS.
    - https://github.com/umbraco/Umbraco-CMS/blob/release-8.1.0/src/Umbraco.Web.UI.Client/src/views/components/umb-grid-selector.html
    - Modified under the permissions of the MIT License.
    - Modifications are licensed under the Mozilla Public License.
