DataTable - teeny tweak

--- a/src/Umbraco.Community.Contentment/DataEditors/DataTable/data-table.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/DataTable/data-table.html
@@ -33,7 +33,7 @@
             </tr>
         </tbody>
     </table>
-    <a class="umb-node-preview-add" href="" ng-click="vm.add($event)" ng-if="vm.allowAdd" ng-style="vm.styleButton" prevent-default>
+    <a class="umb-node-preview-add" href="" ng-click="vm.add()" ng-if="vm.allowAdd" ng-style="vm.styleButton" prevent-default>
         <localize key="general_add">Add</localize>
     </a>
 </div>
