--- a/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
@@ -57,7 +57,7 @@
 
                 <umb-box ng-if="vm.editor.fields.length > 0">
                     <umb-box-content class="block-form">
-                        <ng-form class="form-horizontal" name="configurationEditorForm" novalidate val-form-manager>
+                        <ng-form ng-class="{ 'form-vertical' : model.size === 'small', 'form-horizontal': model.size === 'large' }" name="configurationEditorForm" novalidate val-form-manager>
                             <umb-property property="field" ng-repeat="field in vm.editor.fields">
                                 <umb-property-editor model="field" is-pre-value="true"></umb-property-editor>
                             </umb-property>
