Removed the Orientation config-field.
I felt it wasn't necessary, and only used on RadioButtonList.
The default orientation/flow will be vertical.

If there is demand for a horizontal-based layout, then we can
explore implementing columns.

--- a/src/Umbraco.Community.Contentment/DataEditors/RadioButtonList/radio-button-list.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/RadioButtonList/radio-button-list.html
@@ -4,7 +4,7 @@
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
 <div class="contentment umb-radiobuttons" ng-controller="Umbraco.Community.Contentment.DataEditors.RadioButtonList.Controller as vm">
-    <ul class="unstyled radio no-indent" ng-class="vm.layout">
+    <ul class="unstyled radio no-indent">
         <li ng-repeat="item in vm.items">
             <label>
                 <input type="radio" ng-model="model.value" value="{{item.value}}" />
