RadioButtonList - refactored to use Umbraco's styling
Added "show descriptions" option.

--- a/src/Umbraco.Community.Contentment/DataEditors/CheckboxList/checkbox-list.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/CheckboxList/checkbox-list.html
@@ -33,7 +33,7 @@
                 </span>
                 <span class="umb-form-check__text">
                     <span ng-bind-html="item.name | safe_html"></span>
-                    <small ng-if="vm.showDescriptions" ng-bind-html="item.description | safe_html"></small>
+                    <small ng-if="vm.showDescriptions && item.description" ng-bind-html="item.description | safe_html"></small>
                 </span>
             </label>
         </li>
