--- a/src/Umbraco.Community.Contentment/DataEditors/RadioButtonList/radio-button-list.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/RadioButtonList/radio-button-list.html
@@ -1,4 +1,9 @@
-﻿<!-- Copyright © 2019 Lee Kelleher, Umbrella Inc and other contributors.
+﻿<!-- Copyright © 2013-present Umbraco.
+   - Parts of this Source Code has been derived from Umbraco CMS.
+   - https://github.com/umbraco/Umbraco-CMS/blob/release-8.1.5/src/Umbraco.Web.UI.Client/src/views/components/forms/umb-radiobutton.html
+   - Modified under the permissions of the MIT License.
+   - Modifications are licensed under the Mozilla Public License.
+   - Copyright © 2019 Lee Kelleher, Umbrella Inc and other contributors.
    - This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
@@ -6,10 +11,15 @@
 <div class="contentment umb-radiobuttons" ng-controller="Umbraco.Community.Contentment.DataEditors.RadioButtonList.Controller as vm">
     <ul class="unstyled radio no-indent">
         <li ng-repeat="item in vm.items">
-            <label>
-                <input type="radio" ng-model="model.value" value="{{item.value}}" />
-                <span ng-bind-html="item.name | safe_html"></span>
-                <small ng-if="item.description &amp;&amp; vm.layout === ''" ng-bind-html="item.description | safe_html"></small>
+            <label class="radio umb-form-check umb-form-check--radiobutton" ng-class="{ 'umb-form-check--disabled': item.disabled }">
+                <input type="radio" class="umb-form-check__input" value="{{item.value}}" ng-model="model.value" ng-disabled="item.disabled" />
+                <span class="umb-form-check__state" aria-hidden="true">
+                    <span class="umb-form-check__check"></span>
+                </span>
+                <span class="umb-form-check__text">
+                    <span ng-bind-html="item.name | safe_html"></span>
+                    <small ng-if="vm.showDescriptions && item.description" ng-bind-html="item.description | safe_html"></small>
+                </span>
             </label>
         </li>
     </ul>
