--- a/src/Umbraco.Community.Contentment/DataEditors/MacroPicker/macro-picker.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/MacroPicker/macro-picker.html
@@ -4,25 +4,20 @@
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
 <div class="umb-contentpicker" ng-controller="Umbraco.Community.Contentment.DataEditors.MacroPicker.Controller as vm">
-    <div class="umb-rte row-fluid span8" ng-if="vm.loading">
-        <umb-load-indicator></umb-load-indicator>
+    <div ui-sortable="vm.sortableOptions" ng-model="model.value">
+        <umb-node-preview ng-repeat="item in model.value"
+                          icon="vm.icon"
+                          name="item.name"
+                          published="vm.published"
+                          description="item.alias"
+                          sortable="vm.sortable"
+                          allow-remove="vm.allowRemove"
+                          allow-edit="vm.allowEdit"
+                          on-remove="vm.remove($index)"
+                          on-edit="vm.edit($index)">
+        </umb-node-preview>
     </div>
-    <div ng-if="!vm.loading">
-        <div ui-sortable="vm.sortableOptions" ng-model="model.value">
-            <umb-node-preview ng-repeat="item in model.value"
-                              icon="vm.icon"
-                              name="item.name"
-                              published="vm.published"
-                              description="item.alias"
-                              sortable="vm.sortable"
-                              allow-remove="vm.allowRemove"
-                              allow-edit="vm.allowEdit"
-                              on-remove="vm.remove($index)"
-                              on-edit="vm.edit($index, item)">
-            </umb-node-preview>
-        </div>
-        <a class="umb-node-preview-add" href="" ng-click="vm.add($event)" ng-if="vm.allowAdd" prevent-default>
-            <localize key="general_add">Add</localize>
-        </a>
-    </div>
+    <a class="umb-node-preview-add" href="" ng-click="vm.add()" ng-if="vm.allowAdd" prevent-default>
+        <localize key="general_add">Add</localize>
+    </a>
 </div>
