--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.overlay.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.overlay.html
@@ -37,7 +37,7 @@
                 <umb-box-content>
 
                     <ul class="umb-actions umb-actions-child" ng-show="vm.selectBlueprint === false">
-                        <li class="umb-action" ng-repeat="item in vm.items | orderBy:vm.orderBy | filter:vm.searchTerm">
+                        <li class="umb-action" ng-repeat="item in vm.items | filter:vm.searchTerm">
                             <a class="umb-action-link" ng-click="vm.select(item)">
                                 <i class="large icon" ng-class="item.icon"></i>
                                 <span class="menu-label">
