--- a/src/Umbraco.Community.Contentment/DataEditors/_/readonly-node-preview.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/_/readonly-node-preview.html
@@ -3,6 +3,6 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="umb-contentpicker">
+<div class="umb-contentpicker umb-readonlyvalue">
     <umb-node-preview name="model.value.name" description="model.value.description" icon="model.value.icon" />
 </div>
