--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.html
@@ -17,7 +17,7 @@
                             <div ng-bind="item.name"></div>
                         </div>
                     </div>
-                    <button type="button" class="umb-group-builder__open-settings" ng-click="vm.edit($index)"></button>
+                    <button aria-label="Edit content" type="button" class="umb-group-builder__open-settings" ng-click="vm.edit($index)"></button>
                 </div>
 
                 <div class="umb-group-builder__property-actions">
@@ -26,10 +26,10 @@
                             <i class="icon icon-navigation"></i>
                         </div>
                         <div class="umb-group-builder__property-action" title="Copy" ng-if="vm.allowCopy">
-                            <button type="button" class="icon icon-documents" ng-click="vm.copy($index)"></button>
+                            <button aria-label="Copy content block" type="button" class="icon icon-documents" ng-click="vm.copy($index)"></button>
                         </div>
                         <div class="umb-group-builder__property-action" title="Remove" ng-if="vm.allowRemove">
-                            <button type="button" class="icon icon-trash" ng-click="vm.remove($index)"></button>
+                            <button aria-label="Delete content block" type="button" class="icon icon-trash" ng-click="vm.remove($index)"></button>
                         </div>
                     </div>
                 </div>
@@ -37,7 +37,13 @@
             </div>
         </li>
     </ul>
-    <a class="umb-node-preview-add" href="" ng-click="vm.add()" ng-if="vm.allowAdd" prevent-default>
+    <button type="button"
+            class="umb-node-preview-add"
+            id="{{model.alias}}"
+            aria-label="Add content"
+            ng-click="vm.add()"
+            ng-if="vm.allowAdd">
         <localize key="grid_addElement">Add content</localize>
-    </a>
+        <span class="sr-only">...</span>
+    </button>
 </div>
