--- a/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.html
@@ -16,8 +16,14 @@
                           on-remove="vm.remove($index)">
         </umb-node-preview>
     </div>
-    <a class="umb-node-preview-add" href="" ng-click="vm.add()" ng-if="vm.allowAdd" prevent-default>
+    <button type="button"
+            class="umb-node-preview-add"
+            id="{{model.alias}}"
+            aria-label="Add"
+            ng-click="vm.add()"
+            ng-if="vm.allowAdd">
         <localize key="general_add">Add</localize>
-    </a>
+        <span class="sr-only">...</span>
+    </button>
     <contentment-dev-mode ng-model="model.value" on-update="vm.bind()" ng-if="vm.enableDevMode" />
 </div>
