--- a/src/Umbraco.Community.Contentment/DataEditors/MacroPicker/macro-picker.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/MacroPicker/macro-picker.html
@@ -17,7 +17,13 @@
                           on-edit="vm.edit($index)">
         </umb-node-preview>
     </div>
-    <a class="umb-node-preview-add" href="" ng-click="vm.add()" ng-if="vm.allowAdd" prevent-default>
+    <button type="button"
+            class="umb-node-preview-add"
+            id="{{model.alias}}"
+            aria-label="Add"
+            ng-click="vm.add()"
+            ng-if="vm.allowAdd">
         <localize key="general_add">Add</localize>
-    </a>
+        <span class="sr-only">...</span>
+    </button>
 </div>
