[WIP] Reworked "Dev Mode" tool to be a Property Action
This fits in more neatly than having extra UI actions on the editor itself.

Removed the directive implementation.

--- a/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.html
@@ -26,5 +26,5 @@
         <localize key="general_add">Add</localize>
         <span class="sr-only">...</span>
     </button>
-    <contentment-dev-mode ng-model="model.value" on-update="vm.validate()" ng-if="vm.enableDevMode" />
+    <contentment-property-actions umb-property-actions="vm.propertyActions"></contentment-property-actions>
 </div>
