ContentBlocks - Property Action refinements

--- a/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.html
@@ -26,5 +26,5 @@
         <localize key="general_add">Add</localize>
         <span class="sr-only">...</span>
     </button>
-    <contentment-property-actions umb-property-actions="vm.propertyActions"></contentment-property-actions>
+    <contentment-property-actions actions="vm.propertyActions"></contentment-property-actions>
 </div>
