--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.html
@@ -46,5 +46,5 @@
         <localize key="grid_addElement">Add content</localize>
         <span class="sr-only">...</span>
     </button>
-    <contentment-property-actions umb-property-actions="vm.propertyActions"></contentment-property-actions>
+    <contentment-property-actions actions="vm.propertyActions"></contentment-property-actions>
 </div>
