--- a/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
@@ -55,6 +55,10 @@
                     <p>Unable to find the editor for this configuration value.</p>
                 </umb-empty-state>
 
+                <umb-empty-state ng-if="vm.editor.fields.length === 0" position="center">
+                    <p>There are no fields for this item.</p>
+                </umb-empty-state>
+
                 <umb-box ng-if="vm.editor.fields.length > 0">
                     <umb-box-content>
                         <ng-form class="form-horizontal" name="configurationEditorForm" novalidate val-form-manager>
@@ -64,10 +68,6 @@
                         </ng-form>
                     </umb-box-content>
                 </umb-box>
-
-                <umb-empty-state ng-if="vm.editor.fields.length == 0" position="center">
-                    <p>There are no parameters for this item.</p>
-                </umb-empty-state>
 
             </div>
 
