ContentBlocks - re-populates the nameTemplate per digest cycle
AngularJS seems to love re-evaluating things, looping over values again
and again and again. Alas, to support the nameTemplate's interpolating
features, such as using Umbraco's `ncNodeName` filter. It was unavoidable.

The things I do to keep @mattbrailsford happy, eh! :wink: :heart:

--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.html
@@ -14,7 +14,7 @@
                     <div class="umb-group-builder__property-preview-form">
                         <div class="lk-content-blocks-preview-default">
                             <i class="icon" ng-class="item.icon"></i>
-                            <div ng-bind="item.name"></div>
+                            <div ng-bind="vm.populateName(item, $index)"></div>
                         </div>
                     </div>
                     <button aria-label="Edit content" type="button" class="umb-group-builder__open-settings" ng-click="vm.edit($index)"></button>
