--- a/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.html
@@ -9,7 +9,7 @@
                           icon="item.icon || vm.icon"
                           name="item.name"
                           published="vm.published"
-                          description="item.description || item.value"
+                          description="item.description"
                           sortable="vm.sortable"
                           allow-remove="vm.allowRemove"
                           allow-edit="vm.allowEdit"
