ContentBlocks - added property-actions to the List view

--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-list.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-list.html
@@ -26,4 +26,5 @@
         <localize key="grid_addElement">Add content</localize>
         <span class="sr-only">...</span>
     </button>
+    <contentment-property-actions actions="vm.propertyActions"></contentment-property-actions>
 </div>
