ConfigurationEditor - slimmed down the JSON payload
Removed the "name", "icon" and "description",
keeping only the "key" and "value".

The name/icon/description are now populated from a quick lookup.
There's a potential for using string interpolation, but I'm not there yet.

--- a/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.html
@@ -6,10 +6,10 @@
 <div class="umb-contentpicker" ng-controller="Umbraco.Community.Contentment.DataEditors.ConfigurationEditor.Controller as vm">
     <div ui-sortable="vm.sortableOptions" ng-model="model.value">
         <umb-node-preview ng-repeat="item in model.value"
-                          icon="item.icon"
-                          name="item.name"
+                          icon="vm.populate(item, 'icon')"
+                          name="vm.populate(item, 'name')"
                           published="true"
-                          description="item.description"
+                          description="vm.populate(item, 'description')"
                           sortable="vm.sortable"
                           allow-remove="vm.allowRemove"
                           allow-edit="vm.allowEdit"
